Prevent scrolling if settings window grows too large

--- a/www/src/components/App.module.module.css
+++ b/www/src/components/App.module.module.css
@@ -2,8 +2,9 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  width: 100%;
+  overflow: hidden;
   position: absolute;
+  width: 100%;
 }
 
 .footer {
